--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Corps Dakwah Masjid Syuhada"
-baseurl = "https://cdmssyuhada.netlify.app/"
+baseurl = "http://cdmssyuhada.or.id/"
 
 # Agar front-matter pakai format YAML
 MetaDataFormat = "yaml"
