--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Corps Dakwah Masjid Syuhada"
-baseurl = "http://cdmssyuhada.or.id/"
+baseurl = "https://cdmssyuhada.or.id/"
 
 # Agar front-matter pakai format YAML
 MetaDataFormat = "yaml"
@@ -18,12 +18,9 @@ DisqusShortname = "Cdms Syuhada"
 googleAnalytics = "UA-80517197-1" 
 
 # Untuk deskripsi tag meta di homepage
-description = "Web Landing Page CDMS Syuhada"
+description = "Website Official Corps Dakwah Masjid Syuhada"
 
 # Biodata Author
 [author]
     name = "Admin CDMS"
-    homepage = "https://twitter.com/ardiantapargo"
-    bio = "Pengamat Langit"
-    image = "https://www.pngall.com/wp-content/uploads/5/Profile-PNG-File.png"
 
