update ikon admin

--- a/config.toml
+++ b/config.toml
@@ -23,5 +23,5 @@ description = "Website Official Corps Dakwah Masjid Syuhada"
 
 # Biodata Author
 [author]
-    name = "Admin CDMS"
+    name = "Admin"
 
